fix: adjust polaroid positions and sizes for better layout on mobile in details section

--- a/src/components/Details/Details.css
+++ b/src/components/Details/Details.css
@@ -57,7 +57,7 @@
 
 .details-container .polaroid-3 {
   bottom: -3%;
-  left: 15%;
+  left: 80%;
   transform: rotate(7deg);
 }
 
@@ -73,23 +73,34 @@
   }
 
   .details-container .polaroid img {
-    width: 100px;
-    height: 100px;
+    width: 80px;
+    height: 80px;
   }
 
   .details-container .polaroid-1 {
-    top: -9%;
-    left: 5%;
+    top: -75px;
+    left: 6px;
+    bottom: auto;
+    transform: rotate(-10deg);
   }
 
   .details-container .polaroid-2 {
-    top: -9%;
-    right: 5%;
+    top: -75px;
+    right: 6px;
+    left: auto;
+    bottom: auto;
+    transform: rotate(8deg);
   }
 
   .details-container .polaroid-3 {
-    bottom: -12%;
-    left: 70%;
+    bottom: -90px;
+    right: 6px;
+    left: auto;
+    transform: rotate(6deg);
+  }
+
+  .details-content {
+    padding-top: 7rem;
   }
 }
 
